@@ -1,3 +1,10 @@
+2012-06-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-file-name-handler): Catch 'non-essential.
+
+	* tramp-sh.el (tramp-maybe-open-connection): Throw if
+	`non-essential' is non-nil.
+
 2012-06-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-temporary-file-directory): Avoid
